--- a/mrp_bom_standard_price/views/mrp_bom_view.xml
+++ b/mrp_bom_standard_price/views/mrp_bom_view.xml
@@ -9,7 +9,7 @@
             <field name="inherit_id" ref="mrp.mrp_bom_form_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='company_id']" position="after">
-                    <field name="standard_price" groups="product_bom.group_cost_price" />
+                    <field name="cost_price" groups="product_bom.group_cost_price" />
                 </xpath>
                 <xpath expr="//field[@name='bom_lines']//tree//field[@name='product_id']" position="replace">
                     <field name="product_id" on_change="onchange_product_id2(product_id, name, product_qty, product_uom)" select="1"/>
@@ -30,7 +30,7 @@
             <field name="arch" type="xml">
                 <field name="date_stop" position="after">
                     <field name="list_price" groups="product_bom.group_sell_price"/>
-                    <field name="standard_price" groups="product_bom.group_cost_price" />
+                    <field name="cost_price" groups="product_bom.group_cost_price" />
                 </field>
             </field>
         </record>
@@ -42,7 +42,7 @@
             <field name="type">tree</field>
             <field name="arch" type="xml">
                 <field name="product_uom" position="replace">
-                    <field name="bom_cost_price" groups="product_bom.group_cost_price" sum="SUM"/>
+                    <!--<field name="bom_cost_price" groups="product_bom.group_cost_price" sum="SUM"/>-->
                 </field>
             </field>
         </record>
