--- a/mgmtsystem_action/views/mgmtsystem_action.xml
+++ b/mgmtsystem_action/views/mgmtsystem_action.xml
@@ -11,7 +11,9 @@
                     <field name="name" string="Subject"/>
                     <field name="type_action"/>
                     <field name="user_id"/>
+                    <field name="date"/>
                     <field name="date_deadline"/>
+                    <field name="cost"/>
                     <field name="state"/>
                 </tree>
             </field>
@@ -59,6 +61,7 @@
                         <field name="date" string="Date"/>
                         <field name="date_deadline" string="Deadline"/>
                         <field name="system_id"/>
+                        <field name="cost"/>
                     </group>
                     <notebook colspan="4">
                         <page string="Description">
