--- a/mgmtsystem_nonconformity/views/view_partner_form.xml
+++ b/mgmtsystem_nonconformity/views/view_partner_form.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <openerp>
     <data>
-        <record id="view_view_partner_form_inherit" model="ir.ui.view">
+        <record id="view_partner_form_inherit" model="ir.ui.view">
             <field name="name">view.partner.form.inherit</field>
             <field name="type">form</field>
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
                 <notebook position="inside">
-                    <page string="Non conformities">
+                    <page string="Non conformities" groups="mgmtsystem.group_mgmtsystem_user">
                         <separator string="Non conformities" colspan="4" />
                         <field name="mgmtsystem_nonconformity_ids" nolabel="1">
                             <tree string="Non conformities">
