--- a/sale_order_modify_confirmed_service/wizard/wizard_modify_order.xml
+++ b/sale_order_modify_confirmed_service/wizard/wizard_modify_order.xml
@@ -21,11 +21,11 @@
                             domain="[('parent_id','=', partner_id)]"/>
                         <field name="order_line" nolabel="1" colspan="4">
                             <tree string="Order Line" editable="bottom">
-                                <field name="name"/>
-                                <field name="product_id"/>
-                                <field name="price_unit"/>
-                                <field name="discount"/>
-                                <field name="line_id" invisible="1" required="1" />
+                                <field name="name" invisible="1"/>
+                                <field name="product_id" attrs="{'readonly': [('line_id', '!=', False)]}"/>
+                                <field name="price_unit" attrs="{'readonly': [('line_id', '!=', False)]}"/>
+                                <field name="discount" attrs="{'readonly': [('line_id', '!=', False)]}"/>
+                                <field name="line_id" invisible="1" />
                                 <field name="purchase_price" />
                             </tree>
                         </field>
@@ -55,16 +55,16 @@
             <field name="group_id" ref="base.group_sale_manager" />
         </record>
 
-        <!-- ====================================================== -->
-        <!--                    WIZARD ACTION/PRINT                 -->
-        <!-- ====================================================== -->
-        <act_window id="act_modify_saleorder"
-            key2="client_action_multi"
-            name="Modify Sale Order"
-            res_model="wizard.modifyorder"
-            src_model="sale.order"
-            view_id="wizard_modify_order"
-            view_mode="form" target="new" view_type="form" />
+        <!--&lt;!&ndash; ====================================================== &ndash;&gt;-->
+        <!--&lt;!&ndash;                    WIZARD ACTION/PRINT                 &ndash;&gt;-->
+        <!--&lt;!&ndash; ====================================================== &ndash;&gt;-->
+        <!--<act_window id="act_modify_saleorder"-->
+            <!--key2="client_action_multi"-->
+            <!--name="Modify Sale Order"-->
+            <!--res_model="wizard.modifyorder"-->
+            <!--src_model="sale.order"-->
+            <!--view_id="wizard_modify_order"-->
+            <!--view_mode="form" target="new" view_type="form" />-->
 
     </data>
 </openerp>
