--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -286,6 +286,32 @@
                     <field name="sale_id" filter_domain="['|',('sale_id','ilike',self),('origin','ilike',self)]"/>
                     <field name="partner_id"/>
                     <field name="product_id"/>
+                    <separator orientation="vertical"/>
+                    <filter icon="terp-go-month"
+                        string="Last Month"
+                        name="last_month"
+                        help="Delivery of the last month"
+                        domain="[('minimum_planned_date', '&lt;', datetime.date.today().strftime('%%Y-%%m-01 00:00:00')), ('minimum_planned_date', '&gt;=', (datetime.date.today() - relativedelta(months=1)).strftime('%%Y-%%m-01 00:00:00'))]"
+                    />
+                    <filter icon="terp-go-month"
+                        string="Current Month"
+                        name="current_month"
+                        help="Delivery of the current month"
+                        domain="[('minimum_planned_date', '&lt;', (datetime.date.today() + relativedelta(months=1)).strftime('%%Y-%%m-01 00:00:00')), ('minimum_planned_date', '&gt;=', (datetime.date.today()).strftime('%%Y-%%m-01 00:00:00'))]"
+                    />
+                    <filter icon="terp-go-month"
+                        string="Next Month" name="next_month"
+                        domain="[('minimum_planned_date', '&lt;', (datetime.date.today() + relativedelta(months=2)).strftime('%Y-%m-01 00:00:00')), ('minimum_planned_date', '&gt;=', (datetime.date.today() + relativedelta(months=1)).strftime('%Y-%m-01 00:00:00'))]"
+                    />
+                    <field name="date_from" filter_domain="[('minimum_planned_date','&gt;=',self)]"/>
+                    <field name="date_to" filter_domain="[('minimum_planned_date','&lt;=',self)]"/>
+                    <newline/>
+                    <group expand="0" string="Group By...">
+                        <separator orientation="vertical"/>
+                        <filter string="Product" icon="terp-stock_effects-object-colorize" domain="[]" context="{'group_by':'product_id'}"/>
+                        <separator orientation="vertical"/>
+                        <filter string="Order Delivery" icon="terp-go-month" domain="[]" context="{'group_by':'minimum_planned_date'}"/>
+                    </group>
                 </search>
             </field>
         </record>
