--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -287,9 +287,9 @@
                     <field name="partner_id"/>
                     <field name="product_id"/>
                     <separator orientation="vertical"/>
-                    <filter icon="terp-go-month" string="Last Month" name="last_month" help="Delivery of the last month" domain="[('minimum_planned_date', '&lt;', datetime.date.today().strftime('%Y-%m-01 00:00:00')), ('minimum_planned_date', '&gt;=', (datetime.date.today() - relativedelta(months=1)).strftime('%Y-%m-01 00:00:00'))]"/>
-                    <filter icon="terp-go-month" string="Current Month" name="current_month" help="Delivery of the current month" domain="[('minimum_planned_date', '&lt;', (datetime.date.today() + relativedelta(months=1)).strftime('%Y-%m-01 00:00:00')), ('minimum_planned_date', '&gt;=', (datetime.date.today()).strftime('%Y-%m-01 00:00:00'))]"/>
-                    <filter icon="terp-go-month" string="Next Month" name="next_month" help="Delivery of the next month" domain="[('minimum_planned_date', '&lt;', (datetime.date.today() + relativedelta(months=2)).strftime('%Y-%m-01 00:00:00')), ('minimum_planned_date', '&gt;=', (datetime.date.today() + relativedelta(months=1)).strftime('%Y-%m-01 00:00:00'))]"/>
+                    <filter icon="terp-go-month" string="Last Month" name="last_month" help="Delivery of the last month" domain="[('minimum_planned_date', '&lt;', datetime.date.today().strftime('%%Y-%%m-01 00:00:00')), ('minimum_planned_date', '&gt;=', (datetime.date.today() - relativedelta(months=1)).strftime('%%Y-%%m-01 00:00:00'))]"/>
+                    <filter icon="terp-go-month" string="Current Month" name="current_month" help="Delivery of the current month" domain="[('minimum_planned_date', '&lt;', (datetime.date.today() + relativedelta(months=1)).strftime('%%Y-%%m-01 00:00:00')), ('minimum_planned_date', '&gt;=', (datetime.date.today()).strftime('%%Y-%%m-01 00:00:00'))]"/>
+                    <filter icon="terp-go-month" string="Next Month" name="next_month" help="Delivery of the next month" domain="[('minimum_planned_date', '&lt;', (datetime.date.today() + relativedelta(months=2)).strftime('%%Y-%%m-01 00:00:00')), ('minimum_planned_date', '&gt;=', (datetime.date.today() + relativedelta(months=1)).strftime('%%Y-%%m-01 00:00:00'))]"/>
                     <field name="date_from" filter_domain="[('minimum_planned_date','&gt;=',self)]"/>
                     <field name="date_to" filter_domain="[('minimum_planned_date','&lt;=',self)]"/>
                     <newline/>
