--- a/mgmtsystem_action/views/mgmtsystem_action.xml
+++ b/mgmtsystem_action/views/mgmtsystem_action.xml
@@ -55,12 +55,12 @@
                 <form string="Action">
                     <group colspan="4" col="4">
                         <field name="name" colspan="4"/>
-                        <field name="type_action" required="True"/>
+                        <field name="type_action" required="True" invisible="context.get('default_type_action')" />
                         <field name="reference"/>
                         <field name="user_id" string="Responsible" required="1"/>
                         <field name="date" string="Date"/>
                         <field name="date_deadline" string="Deadline"/>
-                        <field name="system_id"/>
+                        <field name="system_id" widget="selection"/>
                         <field name="cost"/>
                     </group>
                     <notebook colspan="4">
